--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "lodash.uniqueid": "^4.0.1",
     "vue": "^2.6.11",
