--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "lodash.uniqueid": "^4.0.1",
     "vue": "^2.6.11",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
